--- a/.github/workflows/nim-release.yml
+++ b/.github/workflows/nim-release.yml
@@ -9,7 +9,7 @@ on:
 env:
   app: 'TODO'
   nim-version: '1.6.0'
-  maintainer: 'jiro4989'
+  maintainer: 'jiro'
   package_desc: 'nimjson generates nim object definitions from json documents.'
   documents: LICENSE README.*
 
