add ignore pattern

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -9,11 +9,13 @@ on:
       - README*
       - LICENSE
       - '**.md'
+      - '**.adoc'
   pull_request:
     paths-ignore:
       - README*
       - LICENSE
       - '**.md'
+      - '**.adoc'
 
 jobs:
   test:
